# softryt-backend

./: .gitignore  README.md  main.py  pyproject.toml  python-test
app/: __init__.py  auth.py  config.py  database.py  main.py
app/models/: __init__.py  comprehensive_scraper.py  pages.py  scraper.py  tools.py
app/prompts/: __init__.py  blog_writer.py  fact_checker.py  review_fact_checker.py  review_writer.py  writer.py
app/routers/: __init__.py  blog.py  comprehensive_scraper.py  pages.py  pipeline.py  tools.py
app/services/: __init__.py  blog_orchestrator.py  fallback_scraper.py  orchestrator.py  review_orchestrator.py  scheduler.py  scraper.py  scraper_pipeline.py
migrations/: 001_create_tables.sql  002_enable_rls.sql  003_seed_viral_tools.sql  005_create_blog_posts.sql  add_comprehensive_data.sql
scripts/: check_all_data.py  check_data.py  check_design_data.py  check_scraped.py  get_failed_ids.py  seed_tools.sql  test_nvidia.py  test_nvidia_models.py  test_openai.py
